--- a/trustpoint/templates/pki/certificates/components/subject_and_names.html
+++ b/trustpoint/templates/pki/certificates/components/subject_and_names.html
@@ -8,7 +8,7 @@
             <div>{% trans 'Subject' %}</div>
             <div>
                 {% for entry in cert.subject.all %}
-                    {{ entry }}<br>
+                    {{ entry.value }}<br>
                 {% endfor %}
             </div>
         </div>
