--- a/trustpoint/templates/pki/certificates/components/hierarchy.html
+++ b/trustpoint/templates/pki/certificates/components/hierarchy.html
@@ -11,9 +11,9 @@
 
                 {% for entry in cert.issuer.all %}
     {% if cert.is_self_signed %}
-        <span class="btn-primary">{{ entry }}</span><br>
+        <span class="btn-primary">{{ entry.value }}</span><br>
     {% else %}
-        <a href="{% url 'pki:certificate-detail' pk=entry.id %}" class="btn-primary">{{ entry }}</a><br>
+        <a href="{% url 'pki:certificate-detail' pk=entry.id %}" class="btn-primary">{{ entry.value }}</a><br>
     {% endif %}
 {% endfor %}
             </div>
