--- a/trustpoint/templates/pki/certificates/components/hierarchy.html
+++ b/trustpoint/templates/pki/certificates/components/hierarchy.html
@@ -1,5 +1,4 @@
 {% load i18n %}
-
 {% block certificate_hierarchy %}
     <h2>{% trans 'Certificate Hierarchy' %}</h2>
     <hr class="hr-m">
@@ -8,25 +7,50 @@
         <div>
             <div>{% trans 'Issuer' %}</div>
             <div>
-                {% for entry in cert.issuer.all %}
-                    {% if cert.is_self_signed %}
-                        <span class="btn-primary">
-                            {% if entry.value %}
-                                {{ entry.oid|add:" ["|add:entry.value|add:"]" }}
-                            {% else %}
-                                {{ entry.oid }}
-                            {% endif %}
-                        </span><br>
-                    {% else %}
-                        <a href="{% url 'pki:certificate-detail' pk=entry.id %}" class="btn-primary">
-                            {% if entry.value %}
-                                {{ entry.oid|add:" ["|add:entry.value|add:"]" }}
-                            {% else %}
-                                {{ entry.oid }}
-                            {% endif %}
-                        </a><br>
-                    {% endif %}
-                {% endfor %}
+                <style>
+                .issuer-table {
+                    border-collapse: collapse;
+                    margin-top: 6px;
+                    margin-bottom: 12px;
+                }
+                .issuer-table td {
+                    padding: 2px 18px 2px 0;
+                    text-align: left;
+                    vertical-align: top;
+                    border: none;
+                }
+                .issuer-table td:first-child {
+                    min-width: 140px;
+                    max-width: 220px;
+                }
+                .issuer-table td:nth-child(2) {
+                    min-width: 115px;
+                    color: #b0b0b0;
+                }
+                .issuer-table td:last-child {
+                    min-width: 100px;
+                }
+                </style>
+                <table class="issuer-table">
+                  {% for entry in issuer_entries %}
+                  <tr>
+                      {% if entry.name %}
+                        <td><strong>{{ entry.name }}</strong></td>
+                        <td>({{ entry.oid }})</td>
+                      {% else %}
+                        <td></td>
+                        <td>{{ entry.oid }}</td>
+                      {% endif %}
+                      <td>
+                        {% if cert.is_self_signed %}
+                          <span class="btn-primary">{{ entry.value }}</span>
+                        {% else %}
+                          <a href="{% url 'pki:certificate-detail' pk=entry.id %}" class="btn-primary">{{ entry.value }}</a>
+                        {% endif %}
+                      </td>
+                  </tr>
+                  {% endfor %}
+                </table>
             </div>
         </div>
 
@@ -81,5 +105,4 @@
             </div>
         {% endif %}
     </div>
-
 {% endblock certificate_hierarchy %}
