--- a/trustpoint/templates/help/help_page.html
+++ b/trustpoint/templates/help/help_page.html
@@ -52,11 +52,8 @@
         </div>
         <div class="card-footer">
             <div class="tp-card-btn-footer">
-                <button type="button" value="Back" class="btn btn-secondary btn-half" onClick="history.back()">
-                    {% trans 'Back' %}
-                </button>
                 <a href="{% url clm_url pk=device.pk %}" class="btn btn-primary">
-                    {% trans 'Certificate Lifecycle Management Summary' %}
+                    {% trans 'Back to Certificate Lifecycle Management Summary' %}
                 </a>
             </div>
         </div>
